--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ openai.moderations = /v1/moderations
 # ToDo DALL·E models
 
 # client config
-openai.api_key = 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
+openai.api_key =
 # lenght 1-4000
 openai.max_token = 500
 # randomness 0-1
